# leases-licensing

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  apply_initial_migrations.sh  docker_repo_name  ll_git_history  make_docker_image.sh  manage.py  manage.sh  manage_ll.py  mix_tabs_and_spaces  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: run-tests-dev.yml
dockerdev/: Dockerfile
git_hooks/: pre-commit
leaseslicensing/: __init__.py  admin.py  apps.py  context_processors.py  cron.py  forms.py  helpers.py  ledger_api_utils.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
leaseslicensing/data/: initial_data.json
leaseslicensing/fixtures/: districts.json  dumpdata_uat_25Jul2019.json
leaseslicensing/management/: default_data_manager.py
leaseslicensing/migrations/: 0001_initial.py  0002_alter_proposaltype_name.py  0003_auto_20211217_1019.py  0004_auto_20211217_1547.py  0005_auto_20211217_1549.py  0006_auto_20211222_1617.py  0007_deedpolldocument.py  0008_mapcolumn_maplayer.py  0009_proposalgeometry.py  0010_proposalgeometry_intersects.py  0011_auto_20220119_1535.py  0012_rename_polygons_proposalgeometry_polygon.py  0013_alter_proposalgeometry_proposal.py  0014_auto_20220124_1105.py  0014_remove_proposal_customer_status.py  0015_auto_20220124_1529.py  0015_auto_20220124_1647.py  0016_merge_0015_auto_20220124_1529_0015_auto_20220124_1647.py  0017_auto_20220128_0848.py  0017_auto_20220128_0901.py  0018_auto_20220128_1420.py  0019_auto_20220128_1434.py  0020_auto_20220201_0856.py  (+129 more)
scripts/: myscript.py
scss/: custom.scss
(+345 files in other folders)
