[tool.poetry]
name = "leases-licensing"
version = "1.0.0"
description = "Leases Licensing"
authors = ["DBCA OIM <asi@dbca.wa.gov.au>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.13"
psycopg2-binary = "2.9.1"
dbca-utils = "1.1.6"
confy = "0.3.8"
django_countries = "7.3.2"
django_cron = "0.5.1"
django_reversion = "5.0.0"
django_taggit = "3.0.0"
geojson = "2.5.0"
python_dateutil = "2.8.2"
pytz = "2019.3"
reportlab = "3.5.34"
requests = "2.22.0"
setuptools = "45.2.0"
six = "1.14.0"
git+https://github.com/xzzy/webtemplate.git#egg=webtemplate_dbca
git+https://github.com/dbca-wa/dbca-utils@1.1.1#egg=dbca-utils
psycopg2-binary = "2.8.5"
django-extensions = "3.1.5"
git+https://github.com/xzzy/ledger_api_client.git#egg=ledger_api_client
whitenoise = "6.1.0"
djangorestframework = "3.13.1"
djangorestframework-gis = "1.0"
openpyxl = "3.0.9"

[tool.poetry.dev-dependencies]
ipython = "^8.3.0"
ipdb = "^0.13.9"
pylint = "2.13.8"
flake8 = "4.0.1"
autopep8 = "1.6.0"
black = "22.3.0"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"
